# Topological-Learning

./: .gitignore  README.md  pyproject.toml
data/: synthetic_regimes.csv
scripts/: generate_data.py
src/: run_experiment.py  visualize_attractor.py
src/models/: pipeline.py
src/tda_engine/: embedding.py  homology.py
src/topological_market_dynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
